# Classification-and-Regression-Trees

./: CART_presentation.pptx  README.md  setup.cfg
docs/: cart_documentation.md
src/: __init__.py  main.py
tests/: test_cart_logic.py
