[metadata]
name = flight-cart-analysis
version = 0.1.0
description = Simple CART classification implementation for flight data analysis.
# Uzupełnij poniższe dane swoimi informacjami:
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/flight-cart-analysis
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
# Pakiet nie jest skompresowany (lepsze do debugowania)
zip_safe = False
# Umożliwia Setuptools automatyczne znajdowanie pakietów w katalogu src
packages = find:
include_package_data = True
package_dir =
    =src
# Kluczowe zależności wymagane do uruchomienia głównego kodu
install_requires =
    numpy>=1.20.0
    pandas>=1.3.0
    scikit-learn>=1.0.0
# Minimalna wymagana wersja Pythona
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
# Instrukcja, aby do pakietu 'flight_cart_analysis' dołączyć plik dataset.csv
flight_cart_analysis = dataset.csv 

[options.entry_points]
# Ta sekcja pozwala uruchomić główną funkcję (main()) z linii poleceń.
# Po instalacji, użytkownik może wpisać 'flight-cart-run' w terminalu.
console_scripts =
    flight-cart-run = flight_cart_analysis.main:main

[options.extras_require]
# Opcjonalne zależności, np. do uruchomienia testów
testing =
    pytest
    pytest-cov
